--- a/src/components/AuthWindow/AuthWindow.module.scss
+++ b/src/components/AuthWindow/AuthWindow.module.scss
@@ -2,8 +2,6 @@
 
 .authWindow {
   &__sobank {
-    width: 90%;
-
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -48,7 +46,6 @@
       text-align: center;
       font-family: $sobank-support-font;
       font-weight: 400;
-      font-size: 13px;
       line-height: 17px;
     }
   }
@@ -106,6 +103,13 @@
 
     }
   }
+
+  .codeBlock {
+
+    &__label {
+      font-size: 13px;
+    }
+  }
 }
 
 @include desktop-width {
@@ -133,6 +137,13 @@
 
     &__sobankRedesign {
 
+    }
+  }
+
+  .codeBlock {
+
+    &__label {
+      font-size: 16px;
     }
   }
 }
