--- a/src/components/Inputs/Input.module.scss
+++ b/src/components/Inputs/Input.module.scss
@@ -5,6 +5,7 @@
     position: relative;
 
     width: 100%;
+    height: 50px;
 
     display: flex;
     flex-direction: column;
@@ -32,6 +33,7 @@
     padding: 10px;
 
     width: 100%;
+    height: 100%;
 
     box-sizing: border-box;
 
